--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ts-jest": "^25.3.0",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "fsh-sushi": "^0.13.2"
   }
 }
