Try to fix git error during CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: 'node:12'
 
 before_script:
+  - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.mitre.org/mathompson/ihsus.git”.insteadOf git@gitlab.mitre.org:mathompson/ihsus.git
   - npm install
   - which node
 
