What's the deal with this token

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 image: 'node:12'
 
 before_script:
-  - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.mitre.org/mathompson/ihsus.git”.insteadOf git@gitlab.mitre.org:mathompson/ihsus.git
+  - echo ${CI_JOB_TOKEN}
+  - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.mitre.org/mathompson/ihsus.git
+  # - git config --global url."https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.mitre.org/mathompson/ihsus.git”.insteadOf git@gitlab.mitre.org:mathompson/ihsus.git
   - npm install
   - which node
 
