--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 image: 'node:12'
 
 before_script:
-  - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.mitre.org/mathompson/ihsus.git
-  - cd ihsus
+  # - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.mitre.org/mathompson/ihsus.git
+  # - cd ihsus
   - npm install
   - which node
 
