--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "rm -rf dist && tsc",
     "check": "npm run test && npm run lint && npm run prettier",
     "test": "jest --maxWorkers=4 --coverage",
+    "test:watch": "npm run test -- --watchAll",
+    "coverage": "opener coverage/lcov-report/index.html",
     "lint": "tsc && eslint \"**/*.{js,ts}\"",
-    "prettier": "prettier --check \"**/*.{js,ts}\""
+    "lint:fix": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "prettier": "prettier --check \"**/*.{js,ts}\"",
+    "prettier:fix": "prettier --write \"**/*.{js,ts}\""
   },
   "bin": {
     "ihsus": "dist/app.js"
@@ -32,6 +36,7 @@
     "eslint-config-prettier": "^6.10.1",
     "jest": "^25.2.4",
     "jest-extended": "^0.11.5",
+    "opener": "^1.5.1",
     "prettier": "^2.0.2",
     "ts-jest": "^25.3.0",
     "ts-node": "^8.8.1",
