--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.34",
+    "@types/temp": "^0.8.34",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -45,6 +46,7 @@
   "dependencies": {
     "commander": "^5.1.0",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^0.14.0"
+    "fsh-sushi": "^0.14.0",
+    "temp": "^0.9.1"
   }
 }
