--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "commander": "^5.1.0",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^0.14.0",
-    "temp": "^0.9.1"
+    "temp": "^0.9.1",
+    "winston": "^3.3.3"
   }
 }
