--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.158",
     "commander": "^5.1.0",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^0.14.0",
+    "fsh-sushi": "^0.15.1",
+    "lodash": "^4.17.19",
     "temp": "^0.9.1"
   }
 }
