--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^25.1.4",
+    "@types/lodash": "^4.14.159",
     "@types/node": "^12.12.34",
     "@types/temp": "^0.8.34",
+    "@types/valid-url": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -45,14 +47,12 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
-    "winston": "^3.3.3",
-    "@types/lodash": "^4.14.158",
-    "@types/valid-url": "^1.0.3",
     "commander": "^5.1.0",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^0.15.1",
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "winston": "^3.3.3"
   }
 }
