--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/flat": "^5.0.1",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.159",
@@ -47,6 +48,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "flat": "^5.0.2",
     "commander": "^6.0.0",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^0.15.1",
