--- a/package.json
+++ b/package.json
@@ -54,9 +54,10 @@
     "commander": "^6.0.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^0.15.1",
+    "fsh-sushi": "^0.16.0",
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yaml": "^1.10.0"
   }
 }
