--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "commander": "^6.0.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^0.16.0",
+    "fsh-sushi": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
     "winston": "^3.3.3",
