--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/lodash": "^4.14.159",
     "@types/node": "^12.12.34",
     "@types/temp": "^0.8.34",
+    "@types/toposort": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -57,6 +58,7 @@
     "fsh-sushi": "^1.0.0-beta.1",
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
+    "toposort": "^2.0.2",
     "winston": "^3.3.3",
     "yaml": "^1.10.0"
   }
