--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/ini": "^1.3.30",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^1.0.0-beta.1",
+    "ini": "^1.3.5",
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
     "toposort": "^2.0.2",
