--- a/test/utils/fixtures/ig-ini/ig.ini
+++ b/test/utils/fixtures/ig-ini/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = ig-ini/ImplementationGuide-fsh.example.json
+ig = ImplementationGuide-fsh.example.json
 template = fhir.base.template#current
