--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "commander": "^6.0.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^1.0.0-beta.1",
+    "fsh-sushi": "^1.0.0",
     "ini": "^1.3.5",
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
