--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/semver": "^7.3.4",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "flat": "^5.0.2",
