--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.159",
     "@types/node": "^12.12.34",
+    "@types/semver": "^7.3.4",
     "@types/temp": "^0.8.34",
     "@types/toposort": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -52,7 +53,6 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/semver": "^7.3.4",
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "flat": "^5.0.2",
@@ -60,6 +60,7 @@
     "fsh-sushi": "^1.0.0",
     "ini": "^1.3.5",
     "lodash": "^4.17.19",
+    "semver": "^7.3.2",
     "temp": "^0.9.1",
     "toposort": "^2.0.2",
     "winston": "^3.3.3",
