--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^12.12.34",
     "@types/temp": "^0.8.34",
     "@types/toposort": "^2.0.3",
+    "@types/valid-url": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -61,6 +62,7 @@
     "lodash": "^4.17.19",
     "temp": "^0.9.1",
     "toposort": "^2.0.2",
+    "valid-url": "^1.0.9",
     "winston": "^3.3.3",
     "yaml": "^1.10.0"
   }
