Update contributors list

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "contributors": [
     "Julia Afeltra <jafeltra@mitre.org>",
+    "Julian Carter <jacarter@mitre.org",
     "Nick Freiter <nfreiter@mitre.org>",
     "Chris Moesel <cmoesel@mitre.org>",
     "Mint Thompson <mathompson@mitre.org>"
