--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^12.12.34",
     "@types/semver": "^7.3.4",
     "@types/temp": "^0.8.34",
+    "@types/text-table": "^0.2.1",
     "@types/toposort": "^2.0.3",
     "@types/valid-url": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -64,6 +65,7 @@
     "lodash": "^4.17.19",
     "semver": "^7.3.2",
     "temp": "^0.9.1",
+    "text-table": "^0.2.0",
     "toposort": "^2.0.2",
     "valid-url": "^1.0.9",
     "winston": "^3.3.3",
