--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/diff": "^4.0.2",
     "@types/flat": "^5.0.1",
     "@types/fs-extra": "^9.0.1",
     "@types/ini": "^1.3.30",
@@ -58,6 +59,8 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
+    "diff": "^5.0.0",
+    "diff2html-cli": "^5.1.6",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^1.0.0",
