--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/diff": "^4.0.2",
     "@types/flat": "^5.0.1",
     "@types/fs-extra": "^9.0.1",
+    "@types/hogan.js": "^3.0.0",
     "@types/ini": "^1.3.30",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.159",
@@ -61,7 +62,7 @@
     "chalk": "^4.1.0",
     "commander": "^6.0.0",
     "diff": "^5.0.0",
-    "diff2html-cli": "^5.1.6",
+    "diff2html": "^3.1.18",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^1.0.0",
