--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "commander": "^6.0.0",
     "diff": "^5.0.0",
     "diff2html": "^3.1.18",
+    "fhir": "^4.8.2",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^1.1.0",
