Initial support for loading existing aliases (AymericGrassart)
Squashed from:

alias-file option initial changes
fix
Remove temp test files
AliasProcessor static class introduced with tests.
Remove reinstall package.json command
lint fixes
prettier:fix
alias-file to alias-filepath
comment changes
Update README.md
alias-filepath to alias-file consistency
optional alias-file
multi-line parsing
lint & prettier

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/antlr4": "^4.7.2",
     "@types/diff": "^4.0.2",
     "@types/flat": "^5.0.1",
     "@types/fs-extra": "^9.0.1",
