--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ini": "^1.3.8",
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10",
+    "sanitize-filename": "^1.6.3",
     "semver": "^7.3.2",
     "temp": "^0.9.1",
     "text-table": "^0.2.0",
