--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "Mint Thompson <mathompson@mitre.org>",
     "Guhan B. Thuran <gthuran@mitre.org>"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FHIR/GoFSH.git"
+  },
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/antlr4": "^4.7.2",
@@ -40,7 +44,7 @@
     "@types/fs-extra": "^9.0.1",
     "@types/hogan.js": "^3.0.0",
     "@types/ini": "^1.3.30",
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^28.1.6",
     "@types/lodash": "^4.14.159",
     "@types/node": "^12.12.34",
     "@types/readline-sync": "^1.4.3",
@@ -54,13 +58,13 @@
     "copyfiles": "^2.4.1",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^6.10.1",
-    "jest": "^27.4.5",
+    "jest": "^28.1.3",
     "jest-extended": "^1.2.0",
     "opener": "^1.5.1",
     "prettier": "^2.0.2",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^8.8.1",
-    "typescript": "^3.8.3"
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "antlr4": "~4.8.0",
@@ -69,6 +73,7 @@
     "diff": "^5.0.0",
     "diff2html": "^3.1.18",
     "fhir": "^4.10.0",
+    "fhir-package-loader": "^0.1.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
     "fsh-sushi": "^2.10.1",
