--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@types/text-table": "^0.2.1",
     "@types/toposort": "^2.0.3",
     "@types/valid-url": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "copyfiles": "^2.4.1",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^6.10.1",
@@ -76,7 +76,7 @@
     "fhir-package-loader": "^0.1.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^2.10.1",
+    "fsh-sushi": "^3.0.0-beta.3",
     "ini": "^1.3.8",
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10",
