--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gofsh",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "GoFSH is a FHIR Shorthand (FSH) decompiler, able to convert formal FHIR definitions from JSON to FSH.",
   "main": "dist/index.js",
   "scripts": {
@@ -76,17 +76,20 @@
     "fhir-package-loader": "^0.3.0",
     "flat": "^5.0.2",
     "fs-extra": "^9.0.1",
-    "fsh-sushi": "^3.0.0",
+    "fsh-sushi": "^3.1.0",
     "ini": "^1.3.8",
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10",
     "sanitize-filename": "^1.6.3",
-    "semver": "^7.3.2",
+    "semver": "^7.5.4",
     "temp": "^0.9.1",
     "text-table": "^0.2.0",
     "toposort": "^2.0.2",
     "valid-url": "^1.0.9",
     "winston": "^3.3.3",
     "yaml": "^1.10.0"
+  },
+  "overrides": {
+    "semver": "$semver"
   }
 }
