--- a/package.json
+++ b/package.json
@@ -38,56 +38,56 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/antlr4": "^4.7.2",
-    "@types/diff": "^4.0.2",
-    "@types/flat": "^5.0.1",
-    "@types/fs-extra": "^9.0.1",
-    "@types/hogan.js": "^3.0.0",
-    "@types/ini": "^1.3.30",
-    "@types/jest": "^28.1.6",
-    "@types/lodash": "^4.14.159",
-    "@types/node": "^12.12.34",
-    "@types/readline-sync": "^1.4.3",
-    "@types/semver": "^7.3.4",
-    "@types/temp": "^0.8.34",
-    "@types/text-table": "^0.2.1",
-    "@types/toposort": "^2.0.3",
-    "@types/valid-url": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@types/antlr4": "^4.11.6",
+    "@types/diff": "^5.2.1",
+    "@types/flat": "^5.0.5",
+    "@types/fs-extra": "^11.0.4",
+    "@types/hogan.js": "^3.0.5",
+    "@types/ini": "^4.1.1",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.16.1",
+    "@types/readline-sync": "^1.4.8",
+    "@types/semver": "^7.5.8",
+    "@types/temp": "^0.9.4",
+    "@types/text-table": "^0.2.5",
+    "@types/toposort": "^2.0.7",
+    "@types/valid-url": "^1.0.7",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^6.10.1",
-    "jest": "^28.1.3",
-    "jest-extended": "^3.0.2",
-    "opener": "^1.5.1",
-    "prettier": "^2.0.2",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "jest-extended": "^4.0.2",
+    "opener": "^1.5.2",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "antlr4": "~4.13.1-patch-1",
-    "chalk": "^4.1.0",
-    "commander": "^6.0.0",
-    "diff": "^5.0.0",
-    "diff2html": "^3.1.18",
-    "fhir": "^4.10.0",
+    "antlr4": "^4.13.2",
+    "chalk": "^4.1.2",
+    "commander": "^12.1.0",
+    "diff": "^6.0.0-beta",
+    "diff2html": "^3.4.48",
+    "fhir": "^4.12.0",
     "fhir-package-loader": "^1.0.0",
     "flat": "^5.0.2",
-    "fs-extra": "^9.0.1",
-    "fsh-sushi": "^3.9.0",
-    "ini": "^1.3.8",
+    "fs-extra": "^11.2.0",
+    "fsh-sushi": "^3.11.0",
+    "ini": "^4.1.3",
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10",
     "sanitize-filename": "^1.6.3",
-    "semver": "^7.5.4",
-    "temp": "^0.9.1",
+    "semver": "^7.6.3",
+    "temp": "^0.9.4",
     "text-table": "^0.2.0",
     "toposort": "^2.0.2",
     "valid-url": "^1.0.9",
-    "winston": "^3.3.3",
-    "yaml": "^1.10.0"
+    "winston": "^3.14.2",
+    "yaml": "^2.5.0"
   },
   "overrides": {
     "semver": "$semver"
