--- a/package.json
+++ b/package.json
@@ -39,24 +39,24 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/antlr4": "^4.11.6",
-    "@types/diff": "^5.2.1",
+    "@types/diff": "^5.2.3",
     "@types/flat": "^5.0.5",
     "@types/fs-extra": "^11.0.4",
     "@types/hogan.js": "^3.0.5",
     "@types/ini": "^4.1.1",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^20.16.1",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.12",
+    "@types/node": "^20.17.1",
     "@types/readline-sync": "^1.4.8",
     "@types/semver": "^7.5.8",
     "@types/temp": "^0.9.4",
     "@types/text-table": "^0.2.5",
     "@types/toposort": "^2.0.7",
     "@types/valid-url": "^1.0.7",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.0",
+    "@typescript-eslint/parser": "^8.12.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.9.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
@@ -64,20 +64,20 @@
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "antlr4": "^4.13.2",
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
-    "diff": "^6.0.0-beta",
+    "diff": "^7.0.0",
     "diff2html": "^3.4.48",
     "fhir": "^4.12.0",
     "fhir-package-loader": "^1.0.0",
     "flat": "^5.0.2",
     "fs-extra": "^11.2.0",
     "fsh-sushi": "^3.12.0",
-    "ini": "^4.1.3",
+    "ini": "^5.0.0",
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10",
     "sanitize-filename": "^1.6.3",
@@ -86,8 +86,8 @@
     "text-table": "^0.2.0",
     "toposort": "^2.0.2",
     "valid-url": "^1.0.9",
-    "winston": "^3.14.2",
-    "yaml": "^2.5.0"
+    "winston": "^3.15.0",
+    "yaml": "^2.6.0"
   },
   "overrides": {
     "semver": "$semver"
