Fix types root in package.json
The types root incorrrectly pointed to the app types instead of the index types. This prevented GoFSH from being imported property in other applications.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bin": {
     "gofsh": "dist/app.js"
   },
-  "types": "dist/app.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/**/*.{js,json,d.ts}",
     "dist/utils/template.html"
