--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "diff": "^7.0.0",
     "diff2html": "^3.4.48",
     "fhir": "^4.12.0",
-    "fhir-package-loader": "^1.0.0",
+    "fhir-package-loader": "^2.0.0-beta.3",
     "flat": "^5.0.2",
     "fs-extra": "^11.2.0",
-    "fsh-sushi": "^3.12.1",
+    "fsh-sushi": "file:../fsh-sushi-new-fpl.tgz",
     "ini": "^5.0.0",
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10",
